--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
       (async () => {
         const response = await fetch('https://api.github.com/repos/SkyTheCodeMaster/meme-site/contents/');
         const data = await response.json();
-        let htmlString = '<ul>';
+        let htmlString = '<ol>';
         for (let file of data) {
           htmlString += `<li><a href="${file.path}">${file.name}</a></li>`;
         }
-        htmlString += '</ul>';
+        htmlString += '</ol>';
         document.getElementsByTagName('body')[0].innerHTML = htmlString;
       })()
     </script>
