--- a/gman/index.html
+++ b/gman/index.html
@@ -6,7 +6,7 @@
         const data = await response.json();
         let htmlString = '<ol>';
         for (let file of data) {
-          htmlString += `<li><a href="${file.path}">${file.name}</a></li>`;
+          htmlString += `<li><a href="${file.name}">${file.name}</a></li>`;
         }
         htmlString += '</ol>';
         document.getElementsByTagName('body')[0].innerHTML = htmlString;
