--- a/gman/index.html
+++ b/gman/index.html
@@ -6,7 +6,12 @@
         const data = await response.json();
         let htmlString = '<ol>';
         for (let file of data) {
-          htmlString += `<li><a href="${file.name}">${file.name}</a></li>`;
+          if (file.type == "dir") {
+            str = "[FOLDER]"
+            htmlString += `<li><a href="${file.name}">str + ${file.name}</a></li>`;
+          } else {
+            htmlString += `<li><a href="${file.name}">${file.name}</a></li>`;
+          };
         }
         htmlString += '</ol>';
         document.getElementsByTagName('body')[0].innerHTML = htmlString;
