--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
   <body>
     <script>
       (async () => {
-        const response = await fetch('https://api.github.com/repos/SkyTheCodeMaster/meme-site/contents/');
+        const response = await fetch('https://api.github.com/repos/SkyTheCodeMaster/meme-site/contents/gman');
         const data = await response.json();
         let htmlString = '<ol>';
         for (let file of data) {
-          htmlString += `<li><a href="${file.path}">${file.name}</a></li>`;
+          if (file.type == "dir") {
+            str = "[FOLDER]"
+            htmlString += `<li><a href="${file.name}">str + ${file.name}</a></li>`;
+          } else {
+            htmlString += `<li><a href="${file.name}">${file.name}</a></li>`;
+          };
         }
         htmlString += '</ol>';
         document.getElementsByTagName('body')[0].innerHTML = htmlString;
