--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         let htmlString = '<ol>';
         for (let file of data) {
           if (file.type == "dir") {
-            str = "[FOLDER]"
-            htmlString += `<li><a href="${file.name}">str + ${file.name}</a></li>`;
+            str = "[FOLDER]" + ${file.name}
+            htmlString += `<li><a href="${file.name}">$str</a></li>`;
           } else {
             htmlString += `<li><a href="${file.name}">${file.name}</a></li>`;
           };
