--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         let htmlString = '<ol>';
         for (let file of data) {
           if (file.type == "dir") {
-            str = "[FOLDER]" + ${file.name}
-            htmlString += `<li><a href="${file.name}">$str</a></li>`;
+            wack = "[FOLDER]" + ${file.name}
+            htmlString += `<li><a href="${file.name}">${wack}</a></li>`;
           } else {
             htmlString += `<li><a href="${file.name}">${file.name}</a></li>`;
           };
