--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <html>
+  <head>
+    <title>meme-site/</title>
+    <meta property="og:site_name" content="Sky's Meme Server">
+    <meta property="og:url" content="https://skythecodemaster.github.io/meme-site/">
+    <meta property="og:title" content="/">
+    <meta property="og:description" content="Sky's Meme Server">
+    <meta property="og:type" content="website">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
   <body>
+    <h1>meme-site/</h1>
     <script>
       (async () => {
         const response = await fetch('https://api.github.com/repos/SkyTheCodeMaster/meme-site/contents/');
