--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <h1>meme-site/</h1>
+    <content></content>
     <script>
       (async () => {
         const response = await fetch('https://api.github.com/repos/SkyTheCodeMaster/meme-site/contents/');
@@ -24,7 +25,7 @@
           };
         }
         htmlString += '</ol>';
-        document.getElementsByTagName('body')[0].innerHTML = htmlString;
+        document.getElementsByTagName('content')[0].innerHTML = htmlString;
       })()
     </script>
   <body>
