--- a/gman/index.html
+++ b/gman/index.html
@@ -1,5 +1,16 @@
 <html>
+  <head>
+    <title>meme-site/</title>
+    <meta property="og:site_name" content="Sky's Meme Server">
+    <meta property="og:url" content="https://skythecodemaster.github.io/meme-site/">
+    <meta property="og:title" content="/gman/">
+    <meta property="og:description" content="Sky's Meme Server">
+    <meta property="og:type" content="website">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
   <body>
+    <h1>meme-site/gman/</h1>
+    <content></content>
     <script>
       (async () => {
         const response = await fetch('https://api.github.com/repos/SkyTheCodeMaster/meme-site/contents/gman');
@@ -7,14 +18,14 @@
         let htmlString = '<ol>';
         for (let file of data) {
           if (file.type == "dir") {
-            str = "[FOLDER]"
-            htmlString += `<li><a href="${file.name}">str + ${file.name}</a></li>`;
+            wack = "[FOLDER] " + file.name
+            htmlString += `<li><a href="${file.name}">${wack}</a></li>`;
           } else {
             htmlString += `<li><a href="${file.name}">${file.name}</a></li>`;
           };
         }
         htmlString += '</ol>';
-        document.getElementsByTagName('body')[0].innerHTML = htmlString;
+        document.getElementsByTagName('content')[0].innerHTML = htmlString;
       })()
     </script>
   <body>
