revert the ~~pain~~ best change ever

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             wack = "[FOLDER] " + file.name
             htmlString += `<li><a href="${file.name}">${wack}</a></li>`;
           } else {
-            htmlString += `<li><a href="${file.name}">${file.name}<img src="${file.name}"></a></li>`;
+            htmlString += `<li><a href="${file.name}">${file.name}</a></li>`;
           };
         }
         htmlString += '</ol>';
